apps/oxlint/src/snapshots/fixtures__cli__invalid_config_type_difference_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_type_difference
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `jest/no-hooks`:
  |   invalid type: boolean `true`, expected a string
  |   received config: `{ "allow": [ true, false ] }`

----------
CLI result: InvalidOptionConfig
----------
