apps/oxlint/src/snapshots/fixtures__cli__issue_11644_-c .oxlintrc.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json
working directory: fixtures/cli/issue_11644
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
